--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -209,7 +209,7 @@
                 <span class="openTime"><i class="fas fa-clock"></i> L a J 16:00 a 21:00 V
                     9:00 a 14:00</span>
                 <span class="location"><i class="fas fa-map-marker-alt"></i> C\Marques de Paradas 22 - 1º dcha 41001, Sevilla</span>
-                <span class="mail"><i class="fas fa-envelope"></i> info@patrodent.com</span>
+                <span class="mail"><i class="fas fa-envelope"></i> <a href="mailto:info@patrodent.com">info@patrodent.com</a></span>
             </div>
         </div>
     </header>
