--- a/v2/patrodent/templates/preguntas-odontopediatria.html
+++ b/v2/patrodent/templates/preguntas-odontopediatria.html
@@ -48,7 +48,7 @@
                 <p><strong>Atención</strong>: las recomendaciones anteriormente detalladas con para dientes permanentes. NUNCA coloques un diente de leche de vuelta en boca.</p>
             </li>
             <li>
-                <p>Si el diente está DESPLAZADO</p>
+                <p>Si el diente está <strong>DESPLAZADO</strong></p>
                 <ol class="olnum">
                     <li>Se trata de una emergencia y necesita atención inmediata de un dentista.</li>
                     <li>Intenta colocar el diente con suavidad en su posición original</li>
