--- a/v2/patrodent/templates/preguntas-ortodoncia.html
+++ b/v2/patrodent/templates/preguntas-ortodoncia.html
@@ -12,7 +12,7 @@
     <h4><i class="fa fa-plus"></i> <i class="fa fa-minus hidden"></i>¿Cuál es la edad ideal para colocarse Ortodoncia?</h4>
     <div class="answer">
         <p>No existe una edad ideal si bien, si el problema del niño es una descoordinación de sus bases óseas (superior e inferior), lo ideal es hacerlo en crecimiento.</p>
-        <ul>
+        <ul class="enum">
             <li>Si el paciente tiene la mandíbula en posición más retrasada que el maxilar superior (clase II ósea), será necesario que éste lleve un aparato de ortopedia de avance mandibular para conseguir la armonía entre ambos huesos (maxilar y mandíbula), y así corregir esa descompensación. Lo ideal es llevarlo en el máximo pico de crecimiento, que normalmente es de 9 a 13 años en niñas; y de 10 a 14 años en niños.</li>
             <li>Si por el contrario, esta descompensación ocurre estando el maxilar superior más retrasado que la mandíbula (clase III ósea), para este tipo de pacientes será necesario un aparato de ortopedia cuya función es la tracción hacia adelante del maxilar superior, para así conseguir el equilibrio entre ambos huesos (superior e inferior). En este caso, se debe tratar al niño cuánto más pequeño mejor; lo ideal desde los 6 a los 8 años. </li>
         </ul>
