--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -22,7 +22,7 @@
        <link href="{% static 'fonts/fontawesome/css/solid.min.css' %}" rel="stylesheet">
        <link rel="stylesheet" href="{% static 'photoswipe/dist/photoswipe.min.css' %}">
        <link rel="stylesheet" href="{% static 'photoswipe/dist/default-skin/default-skin.min.css' %}">
-{#       <link rel="stylesheet" type="text/css" href="{% static 'jsor-jcarousel-0.3.1/examples/responsive/jcarousel.responsive.min.css' %}">#}
+       <link rel="stylesheet" type="text/css" href="{% static 'jsor-jcarousel-0.3.1/examples/responsive/jcarousel.responsive.min.css' %}">
        <link rel="stylesheet" href="{% static 'css/style.min.css' %}" type="text/css" media="all">
    {% endblock %}
    {% block js %}
@@ -32,7 +32,7 @@
     <script src="{% static 'js/script.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/jquery.easing.1.3.min.js' %}" type="text/javascript"></script>
     <script type="text/javascript" src="{% static 'js/jquery.detect-mobile.min.js' %}"></script>
-{#    <script type="text/javascript" src="{% static 'jsor-jcarousel-0.3.1/dist/jquery.jcarousel.min.js' %}"></script>#}
+    <script type="text/javascript" src="{% static 'jsor-jcarousel-0.3.1/dist/jquery.jcarousel.min.js' %}"></script>
     <script src="{% static 'photoswipe/dist/photoswipe.min.js' %}"></script>
     <script src="{% static 'photoswipe/dist/photoswipe-ui-default.min.js' %}"></script>
    <script src="https://www.youtube.com/iframe_api"></script>
